@@ -13,5 +13,5 @@ SQLScriptPreferencesPanel.updateRefActionToolTip=Append ON UPDATE ...
 SQLScriptPreferencesTab.title=SQL Scripts
 SQLScriptPreferencesTab.hint=Settings for the SQL Script plugin
 
-
+SQLScriptPreferencesPanel.useDoubleQuotesForQualifying=Use double quotes (") for qualifying
 
